--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,6 +1,5 @@
 ---
-title: "Taylor Swift 
-(Soon-to-be-Kelce)"
+title: "Taylor Swift (Soon-to-be-Kelce)"
 subtitle: "STA/ISS 313 - Spring 2024 - Project 1"
 author: "Team Robots 🤖"
 title-slide-attributes:
@@ -37,7 +36,7 @@ knitr::opts_chunk$set(
   dpi = 300, 
   fig.width = 6, 
   fig.asp = 0.618, 
-  out.width = "70%"
+  out.width = "90%"
   )
 ```
 
@@ -50,20 +49,20 @@ taylor_albums <- readr::read_csv('data/taylor_albums.csv', show_col_types = FALS
 
 # Load your data here
 
-#| label: question1a-wrangle-and-plot
-
 taylor_all_songs_including_singles <- taylor_all_songs |>
   drop_na(album_name) |>
   mutate(is_single = !(is.na(single_release)))
 
 taylor_albums_energy <- taylor_all_songs_including_singles |>
   drop_na(energy) |>
+  filter(is_single == FALSE) |>
   group_by(album_name) |>
   summarise(album_energy = mean(energy))
 
-taylor_singles_energy <- taylor_all_songs_including_singles %>%
-  filter(is_single == TRUE) %>%
-  group_by(album_name) %>%
+taylor_singles_energy <- taylor_all_songs_including_singles |>
+  drop_na(energy) |>
+  filter(is_single == TRUE) |>
+  group_by(album_name) |>
   summarise(singles_energy = mean(energy))
 
 
@@ -81,7 +80,9 @@ plot1a_data <- plot1a_data |>
   )
 
 plot1a_data <- plot1a_data |>
-  mutate(album_name = factor(album_name, levels = c("Taylor Swift", "Fearless",  "Fearless (Taylor's Version)",
+  mutate(album_name = ifelse(album_name == "Fearless (Taylor's Version)", "Fearless (TV)", album_name)) |>
+  mutate(album_name = factor(album_name, levels = c("Taylor Swift", "Fearless", 
+                                                    "Fearless (TV)",
                                                     "Speak Now", "Red", "1989", "reputation",
                                                     "Lover", "folklore", "evermore", "Midnights")))
 ```
@@ -107,9 +108,9 @@ plot1a_data <- plot1a_data |>
 ## Energy on Singles and Albums
 
 ```{r}
-
-#| fig-asp: | 0.618
-
+#| label: question1a-wrangle-and-plot
+#| warning: false
+#| fig-asp: 0.618
 #| fig-alt: |
 #|   This figure is a bar chart titled "Energy Values of Taylor 
 #|   Swift Albums Versus Single Releases" that displays the energy of all
@@ -144,11 +145,6 @@ ggplot(plot1a_data, aes(x = album_name, y = energy, fill = album_name)) +
 
 ```{r}
 #| label: question1b-wrangle-and-plot
-#| 
-
-plot1b_data <- taylor_all_songs_including_singles |>
-  drop_na(tempo)
-
 #| fig-alt: |
 #|   This figure is a density ridge plot titled "Tempo Distribution of Taylor Swift Songs"
 #|   that dcompares the tempo of 47 single released
@@ -157,6 +153,9 @@ plot1b_data <- taylor_all_songs_including_singles |>
 #|   released ridge is more normally distributed with a peak around 120 tempo.
 #|   The album released songs also have songs with over a 200 tempo, while the
 #|   single realeased songs do not.
+
+plot1b_data <- taylor_all_songs_including_singles |>
+  drop_na(tempo)
 
 ggplot(plot1b_data, aes(x = tempo, y = is_single, fill = is_single)) +
   geom_density_ridges(show.legend = FALSE) +
@@ -179,6 +178,18 @@ ggplot(plot1b_data, aes(x = tempo, y = is_single, fill = is_single)) +
 ```{r}
 #| label: question2a-wrangle-and-plot
 #| warning: false
+#| fig-asp: 0.618
+#| fig-width: 10
+#| fig-alt: |
+#|   This figure is a point and line plot titled "Taylor Swift album attributes over time"
+#|   that displays the average energy and valence values of each Taylor swift album along 
+#|   the date at which the album was released. Each album is represented by a point, 
+#|   colored to match the album cover, and labeled witht eh album name. Also, each point
+#|   is connected by a line to show the change from one album to the next in terms of 
+#|   energy/valence respectively. Under each set of albums is a dotted red line that displays
+#|   the average change over time among each of these values. The red dotted line along
+#|   with the rest of the plot show that there is a slight decrease, but seemingly 
+#|   insignificant, decrease in both energy and valence scores of her albums over time.
 
 # the wrangle
 taylor_albums_stats <- taylor_all_songs |>
@@ -208,20 +219,6 @@ plot2a_data <- plot2a_data |>
                                    "The Taylor Swift Holiday Collection",
                                    "Red (Taylor's Version)"))
   )
-
-#| fig-asp: 0.618
-#| fig-width: 10
-
-#| fig-alt: |
-#|   This figure is a point and line plot titled "Taylor Swift album attributes over time"
-#|   that displays the average energy and valence values of each Taylor swift album along 
-#|   the date at which the album was released. Each album is represented by a point, 
-#|   colored to match the album cover, and labeled witht eh album name. Also, each point
-#|   is connected by a line to show the change from one album to the next in terms of 
-#|   energy/valence respectively. Under each set of albums is a dotted red line that displays
-#|   the average change over time among each of these values. The red dotted line along
-#|   with the rest of the plot show that there is a slight decrease, but seemingly 
-#|   insignificant, decrease in both energy and valence scores of her albums over time.
 
 #the plot
 ggplot(plot2a_data, aes(x = album_release)) +
@@ -261,6 +258,14 @@ ggplot(plot2a_data, aes(x = album_release)) +
 
 ```{r}
 #| label: question2b-wrangle-and-plot
+#| fig-alt: |
+#|   This figure is a bar plot titled "Original versus Taylor's Score Comparison"
+#|   that displays 8 total bars, each representing a different score value. On the 
+#|   left side of the plot, it dsiplays the user and metacritic score for both the 
+#|   original version of Fearless and the "Taylor's Version" of Fearless. On the right,
+#|   the same but this time for the two versions of the album Red. On top
+#|   of each bar is the score for the plots. The plot shows that all of the Taylor's Version
+#|   score higher than the original version for both metacritic and user scores.
 
 #the wrangle
 original_and_rereleased_albums <- c("Red", "Red (Taylor's Version)", "Fearless", "Fearless (Taylor's Version)")
@@ -281,15 +286,6 @@ plot2b_data <- plot2b_data |>
   mutate(
     score_type = fct_recode(score_type, "metacritic" = "metacritic_score", "user" = "user_score")
   )
-
-#| fig-alt: |
-#|   This figure is a bar plot titled "Original versus Taylor's Score Comparison"
-#|   that displays 8 total bars, each representing a different score value. On the 
-#|   left side of the plot, it dsiplays the user and metacritic score for both the 
-#|   original version of Fearless and the "Taylor's Version" of Fearless. On the right,
-#|   the same but this time for the two versions of the album Red. On top
-#|   of each bar is the score for the plots. The plot shows that all of the Taylor's Version
-#|   score higher than the original version for both metacritic and user scores.
 
 #the plot
 ggplot(plot2b_data, aes(x= score_type, y = score, fill = taylor_owned)) + 
